# CMakeLists.txt for webrtc engine.
#
# Copyright 2014 Yegor Mazur <yegor.mazur@gmail.com>
#
# This file is part of Melange.
#
# Melange is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Melange is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with Melange.  If not, see <http://www.gnu.org/licenses/>.

cmake_minimum_required (VERSION 2.8)

set(SOURCES
	#voice_engine
	${WEBRTC_ROOT}/webrtc/voice_engine/channel.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/channel_manager.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/voe_base_impl.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/monitor_module.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/output_mixer.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/output_mixer_internal.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/shared_data.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/statistics.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/transmit_mixer.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/utility.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/voe_audio_processing_impl.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/voe_base_impl.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/voe_call_report_impl.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/voe_codec_impl.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/voe_dtmf_impl.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/dtmf_inband.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/dtmf_inband_queue.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/voe_encryption_impl.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/voe_external_media_impl.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/voe_file_impl.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/voe_hardware_impl.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/voe_neteq_stats_impl.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/voe_network_impl.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/voe_rtp_rtcp_impl.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/voe_video_sync_impl.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/voe_volume_control_impl.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/voice_engine_impl.cc
	#common_audio
	${WEBRTC_ROOT}/webrtc/common_audio/resampler/resampler.cc
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/auto_corr_to_refl_coef.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/auto_correlation.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/complex_bit_reverse.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/complex_fft.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/copy_set_operations.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/cross_correlation.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/division_operations.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/dot_product_with_scale.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/downsample_fast.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/energy.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/filter_ar.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/filter_ar_fast_q12.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/filter_ma_fast_q12.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/get_hanning_window.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/get_scaling_square.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/ilbc_specific_functions.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/levinson_durbin.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/lpc_to_refl_coef.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/min_max_operations.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/randomization_functions.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/real_fft.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/refl_coef_to_lpc.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/resample.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/resample_48khz.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/resample_by_2.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/resample_by_2_internal.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/resample_fractional.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/spl_init.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/spl_sqrt.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/spl_sqrt_floor.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/spl_version.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/splitting_filter.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/sqrt_of_one_minus_x_squared.c
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/vector_scaling_operations.c
	${WEBRTC_ROOT}/webrtc/common_audio/vad/vad_core.c
	${WEBRTC_ROOT}/webrtc/common_audio/vad/vad_filterbank.c
	${WEBRTC_ROOT}/webrtc/common_audio/vad/vad_gmm.c
	${WEBRTC_ROOT}/webrtc/common_audio/vad/vad_sp.c
	${WEBRTC_ROOT}/webrtc/common_audio/vad/webrtc_vad.c
	#modules
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/recin.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/rtcp.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/normal.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/peak_detection.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/preemptive_expand.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/recout.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/rtp.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/set_fs.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/expand.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/unmute_signal.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/mcu_reset.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/mute_signal.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/signal_mcu.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/correlator.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/min_distortion.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/dtmf_tonegen.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/accelerate.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/bufstats_decision.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/mcu_dsp_common.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/webrtc_neteq.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/split_and_insert.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/merge.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/bgn_update.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/mcu_address_init.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/cng_internal.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/dtmf_buffer.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/random_vector.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/packet_buffer.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/automode.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/codec_db.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/dsp.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/dsp_helpfunctions.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/mix_voice_unvoice.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_g7291.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_celt.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_codec_database.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_g7221c.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_opus.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_g729.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_gsmfr.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_dtmf_detection.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_speex.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_resampler.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_amrwb.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_ilbc.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_pcma.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_red.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_cng.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_g722.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_generic_codec.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_dtmf_playout.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_amr.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_g7221.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_isac.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_neteq.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_pcm16b.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/audio_coding_module_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_pcmu.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/audio_decoder_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/audio_decoder.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/comfort_noise.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/payload_splitter.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/expand.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/background_noise.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/packet_buffer.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/normal.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/neteq_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/audio_multi_vector.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/delay_manager.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/neteq.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/dtmf_buffer.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/buffer_level_filter.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/post_decode_vad.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/statistics_calculator.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/decoder_database.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/audio_vector.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/timestamp_scaler.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/preemptive_expand.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/merge.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/rtcp.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/tools/rtp_generator.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/tools/input_audio_file.cc
	#${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/tools/neteq_rtpplay.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/time_stretch.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/dsp_helper.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/decision_logic_normal.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/decision_logic_fax.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/accelerate.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/random_vector.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/delay_peak_detector.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/decision_logic.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/dtmf_tone_generator.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq4/sync_buffer.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/g722/g722_encode.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/g722/g722_interface.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/g722/g722_decode.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/g711/g711.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/g711/g711_interface.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/cng/webrtc_cng.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/pcm16b/pcm16b.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/abs_quant.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/abs_quant_loop.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/augmented_cb_corr.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/bw_expand.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/cb_construct.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/cb_mem_energy.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/cb_mem_energy_augmentation.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/cb_mem_energy_calc.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/cb_search.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/cb_search_core.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/cb_update_best_index.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/chebyshev.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/comp_corr.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/constants.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/create_augmented_vec.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/decoder_interpolate_lsf.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/decode_residual.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/do_plc.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/energy_inverse.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/enhancer.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/enhancer_interface.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/enh_upsample.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/filtered_cb_vecs.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/frame_classify.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/gain_dequant.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/gain_quant.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/get_cd_vec.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/get_lsp_poly.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/get_sync_seq.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/hp_input.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/hp_output.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/ilbc.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/ilbc_decode.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/ilbc_encode.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/index_conv_dec.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/index_conv_enc.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/init_decode.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/init_encode.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/interpolate.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/interpolate_samples.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/lpc_encode.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/lsf_check.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/lsf_interpolate_to_poly_dec.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/lsf_interpolate_to_poly_enc.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/lsf_to_lsp.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/lsf_to_poly.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/lsp_to_lsf.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/my_corr.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/nearest_neighbor.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/pack_bits.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/poly_to_lsf.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/poly_to_lsp.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/refiner.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/simple_interpolate_lsf.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/simple_lpc_analysis.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/simple_lsf_dequant.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/simple_lsf_quant.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/smooth.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/smooth_out_data.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/sort_sq.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/split_vq.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/state_construct.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/state_search.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/swap_bytes.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/unpack_bits.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/vq3.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/vq4.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/window32_w32.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/xcorr_coef.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/arith_routines.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/arith_routines_hist.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/arith_routines_logist.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/bandwidth_estimator.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/decode.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/decode_bwe.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/decode_plc.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/encode.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/entropy_coding.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/fft.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/filterbanks.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/filterbank_tables.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/filters.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/initialize.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/isacfix.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/lattice.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/lattice_c.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/lpc_masking_model.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/lpc_tables.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/pitch_estimator.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/pitch_filter.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/pitch_filter_c.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/pitch_gain_tables.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/pitch_lag_tables.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/spectrum_ar_model_tables.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/transform.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/arith_routines.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/arith_routines_hist.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/arith_routines_logist.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/bandwidth_estimator.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/crc.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/decode.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/decode_bwe.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/encode.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/encode_lpc_swb.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/entropy_coding.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/fft.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/filterbanks.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/filterbank_tables.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/filter_functions.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/intialize.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/isac.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/lattice.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/lpc_analysis.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/lpc_gain_swb_tables.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/lpc_shape_swb12_tables.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/lpc_shape_swb16_tables.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/lpc_tables.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/pitch_estimator.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/pitch_filter.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/pitch_gain_tables.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/pitch_lag_tables.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/spectrum_ar_model_tables.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/transform.c
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/util/utility.c
	${WEBRTC_ROOT}/webrtc/modules/audio_conference_mixer/source/audio_frame_manipulator.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_conference_mixer/source/audio_conference_mixer_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_conference_mixer/source/time_scheduler.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_conference_mixer/source/level_indicator.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/level_indicator.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_device/audio_device_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_device/linux/audio_device_utility_linux.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_device/linux/audio_device_alsa_linux.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_device/linux/audio_mixer_manager_pulse_linux.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_device/linux/audio_device_pulse_linux.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_device/linux/latebindingsymboltable_linux.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_device/linux/audio_mixer_manager_alsa_linux.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_device/linux/alsasymboltable_linux.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_device/linux/pulseaudiosymboltable_linux.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_device/audio_device_buffer.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_device/audio_device_generic.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_device/audio_device_utility.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/cng/cng_helpfuns.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/noise_suppression_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/audio_buffer.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/gain_control_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/aec/aec_core.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/aec/aec_rdft.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/aec/aec_core_sse2.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/aec/aec_resampler.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/aec/aec_rdft_sse2.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/aec/echo_cancellation.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/agc/digital_agc.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/agc/analog_agc.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/ns/ns_core.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/ns/noise_suppression.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/ns/nsx_core.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/ns/noise_suppression_x.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/aecm/aecm_core.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/aecm/echo_control_mobile.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/level_estimator_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/voice_detection_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/echo_cancellation_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/echo_control_mobile_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/high_pass_filter_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/utility/ring_buffer.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/utility/fft4g.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/utility/delay_estimator.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/utility/delay_estimator_wrapper.c
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/audio_processing_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/processing_component.cc
	${WEBRTC_ROOT}/webrtc/modules/media_file/source/media_file_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/media_file/source/media_file_utility.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtcp_sender.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtcp_utility.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/forward_error_correction.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/producer_fec.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_receiver_video.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_payload_registry.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/forward_error_correction_internal.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_sender_audio.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_receiver_audio.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/dtmf_queue.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_sender.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_sender_video.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_format_vp8.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/vp8_partition_aggregator.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtcp_receiver.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtcp_receiver_help.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/ssrc_database.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_receiver_strategy.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/H264/bitstream_parser.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/H264/bitstream_builder.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_rtcp_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/bitrate.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_utility.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/tmmbr_help.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_header_extension.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_packet_history.cc
	${WEBRTC_ROOT}/webrtc/modules/pacing/paced_sender.cc
	${WEBRTC_ROOT}/webrtc/modules/utility/source/file_recorder_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/utility/source/rtp_dump_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/utility/source/video_frames_queue.cc
	${WEBRTC_ROOT}/webrtc/modules/utility/source/frame_scaler.cc
	${WEBRTC_ROOT}/webrtc/modules/utility/source/audio_frame_operations.cc
	${WEBRTC_ROOT}/webrtc/modules/utility/source/video_coder.cc
	${WEBRTC_ROOT}/webrtc/modules/utility/source/file_player_impl.cc
	${WEBRTC_ROOT}/webrtc/modules/utility/source/coder.cc
	${WEBRTC_ROOT}/webrtc/modules/utility/source/process_thread_impl.cc
	#system_wrappers
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/thread_posix.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/cpu_features.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/event_posix.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/condition_variable_posix.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/sleep.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/file_impl.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/clock.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/sort.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/tick_util.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/rw_lock_posix.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/critical_section.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/event.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/rw_lock_generic.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/event_tracer.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/logging.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/data_log_c.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/data_log.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/aligned_malloc.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/condition_variable.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/critical_section_posix.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/trace_posix.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/atomic32_posix.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/trace_impl.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/rw_lock.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/cpu_info.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/thread.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/cpu.cc
	${WEBRTC_ROOT}/webrtc/modules/udp_transport/source/udp_transport_impl.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/list_no_stl.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/map.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/splitting_filter.cc
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/source/audio_coding_module.cc
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/cpu_linux.cc
	${WEBRTC_ROOT}/webrtc/modules/udp_transport/source/udp_socket_manager_wrapper.cc
	${WEBRTC_ROOT}/webrtc/modules/udp_transport/source/udp_socket_wrapper.cc
	${WEBRTC_ROOT}/webrtc/modules/udp_transport/source/udp_socket_manager_posix.cc
	${WEBRTC_ROOT}/webrtc/modules/udp_transport/source/udp_socket_posix.cc
	${WEBRTC_ROOT}/webrtc/voice_engine/channel_manager_base.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_receiver.cc
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/source/receiver_fec.cc
	)
	
include_directories(
	${WEBRTC_ROOT}
	${WEBRTC_ROOT}/webrtc
	${WEBRTC_ROOT}/webrtc/common_audio/signal_processing/include
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/neteq/interface
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/cng/include
	${WEBRTC_ROOT}/third_party
	${WEBRTC_ROOT}/webrtc/modules/audio_conference_mixer/interface
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/main/interface
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/g722/include
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/g711/include
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/pcm16b/include
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/interface
	${WEBRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/interface
	${WEBRTC_ROOT}/webrtc/modules/audio_device/linux
	${WEBRTC_ROOT}/webrtc/modules/interface
	${WEBRTC_ROOT}/webrtc/system_wrappers/interface
	${WEBRTC_ROOT}/webrtc/modules/utility/interface
	${WEBRTC_ROOT}/webrtc/common_audio/resampler/include
	${WEBRTC_ROOT}/webrtc/modules/audio_device/main/interface
	${WEBRTC_ROOT}/webrtc/modules/rtp_rtcp/interface
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/include
	${WEBRTC_ROOT}/webrtc/modules/udp_transport/interface
	${WEBRTC_ROOT}/webrtc/modules/media_file/interface
	${WEBRTC_ROOT}/webrtc/modules/audio_device
	${WEBRTC_ROOT}/webrtc/modules/audio_device/dummy
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/agc/include
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/ns/include
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/aec/include
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/utility
	${WEBRTC_ROOT}/webrtc/modules/audio_processing/aecm/include
	${WEBRTC_ROOT}/webrtc/common_audio/vad/include
	${WEBRTC_ROOT}/webrtc/system_wrappers/source/spreadsortlib
	${WEBRTC_ROOT}/webrtc/voice_engine/include
	)
	
add_definitions(
	-DWEBRTC_LINUX
	-DWEBRTC_NS_FLOAT
	-DLINUX_ALSA
	-DLINUX_PULSE
	-DNETEQ_VOICEENGINE_CODECS
	-DWEBRTC_TARGET_PC
	-DWEBRTC_DTMF_DETECTION
	-DWEBRTC_SVNREVISION="n/a"
	-msse2
	)
	
add_library(${WEBRTC_ENGINE_OUTPUT} ${SOURCES})
